objects/Underwriting_Notes_and_SOX__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Enter the description/ SPX approval/ body of text</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The topic of this record</inlineHelpText>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriting_Record__c</fullName>
        <label>Underwriting Record</label>
        <referenceTo>Underwriting_Record__c</referenceTo>
        <relationshipLabel>Underwriting Notes and SOX</relationshipLabel>
        <relationshipName>Underwriting_Notes_and_SOX</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Underwriting Notes and SOX</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Underwriting Notes and SOX Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Underwriting Notes and SOX</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>